plank-tree-sitter/grammar.js
/**
 * @file A tree-sitter parser for plank
 * @author Philogy
 * @license MIT
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

const PREC = {
  OR: 1,
  AND: 2,
  COMPARE: 3,
  BIT_OR: 4,
  BIT_XOR: 5,
  BIT_AND: 6,
  SHIFT: 7,
  ADDITIVE: 8,
  MULTIPLICATIVE: 9,
  UNARY: 10,
  POSTFIX: 11,
}

module.exports = grammar({
  name: "plank",

  externals: $ => [
    $._block_comment_content,
    $._string_literal_end,
    $.error_sentinel,
  ],
  extras: ($) => [/\s/, $.line_comment, $.block_comment],
  conflicts: ($) => [
    [$._expr, $._stmt],
    [$.block, $.struct_lit],
    [$.struct_def, $.struct_lit],
    [$.field_def, $.field_init],
    [$.block, $.struct_def]
  ],

  rules: {
    source_file: ($) => repeat($._decl),

    _decl: ($) => choice($.init, $.run, $.const_def, $.import),

    init: ($) => seq("init", $.block),
    run: ($) => seq("run", $.block),
    const_def: ($) => seq("const", $.identifier, optional(seq(":", $._expr)), "=", $._expr, ";"),
    import: ($) => seq(
      "use",
      field("root", $.identifier),
      field("path", repeat(seq("::", $.identifier))),
      field("suffix", optional(choice($.suffix_import_all, $.suffix_import_as, $.suffix_import_group))),
      ";"
    ),
    suffix_import_all: _ => seq("::", "*"),
    suffix_import_as: $ => seq("as", $.identifier),
    suffix_import_group: $ => seq("::", "{", commaSeparated($.import_group_item), "}"),
    import_group_item: $ => seq($.identifier, optional(seq("as", $.identifier))),

    // Expressions
    _expr: ($) => choice($.comptime_block, $.block, $.if_expr, $.match_expr, $._expr_no_block),
    comptime_block: ($) => seq("comptime", $.block),
    _expr_no_block: ($) => choice(
      $.self_type,
      $.identifier,
      $._literal,
      $.member,
      $.fn_call,
      $.fn_def,
      $.struct_def,
      $.struct_lit,
      $.tuple_type,
      $.tuple_lit,
      $.binary_expr,
      $.unary_expr,
      $.paren_expr
    ),

    binary_expr: ($) => {
      /**
       * @param {number} precedence
       * @param {string[]} operators
       */
      const bin_op_variant = (precedence, operators) => prec.left(precedence, seq(
        field("lhs", $._expr),
        field("op", operators.length === 1 ? operators[0] : choice(...operators)),
        field("rhs", $._expr)
      ));

      return choice(
        bin_op_variant(PREC.OR, ["or"]),
        bin_op_variant(PREC.AND, ["and"]),
        bin_op_variant(PREC.COMPARE, ["==", "!=", "<", ">", "<=", ">="]),
        bin_op_variant(PREC.BIT_OR, ["|"]),
        bin_op_variant(PREC.BIT_XOR, ["^"]),
        bin_op_variant(PREC.BIT_AND, ["&"]),
        bin_op_variant(PREC.SHIFT, ["<<", ">>"]),
        bin_op_variant(PREC.ADDITIVE, ["+", "-", "+%", "-%"]),
        bin_op_variant(PREC.MULTIPLICATIVE, ["*", "/", "%", "*%", "+/", "-/", "</", ">/"]),
      )
    },

    unary_expr: ($) => prec(PREC.UNARY, seq(
      field("op", choice("-", "!", "~")),
      field("operand", $._expr)
    )),

    paren_expr: ($) => seq("(", $._expr, ")"),
    fn_call: ($) => prec(PREC.POSTFIX, seq(field("fn", $._expr), "(", commaSeparated($._expr, "args"), ")")),
    member: ($) => prec(PREC.POSTFIX, seq($._expr, ".", $.identifier)),

    if_expr: ($) => seq(
      "if",
      field("condition", $._expr),
      field("then", $.block),
      repeat(seq("else", "if", field("condition", $._expr), field("then", $.block))),
      optional(seq("else", field("else", $.block)))
    ),

    match_expr: ($) => seq(
      "match",
      field("subject", $._expr),
      "{",
      repeat(seq($.match_arm, ",")),
      field("fallback", $.match_fallback_arm),
      optional(","),
      "}"
    ),
    match_arm: ($) => seq(
      field("key", $._expr),
      "=>",
      field("body", $._expr)
    ),
    match_fallback_arm: ($) => seq(
      "else",
      optional(field("binding", $.identifier)),
      "=>",
      field("body", $._expr)
    ),

    block: ($) => seq("{", field("stmts", repeat($._stmt)), field("last_expr", optional($._expr)), "}"),

    // Statements
    _stmt: ($) => choice(
      seq(choice($._expr_no_block, $.return, $.assign, $.let), ";"),
      seq($.if_expr, optional(";")),
      seq($.match_expr, optional(";")),
      $.comptime_block,
      $.while
    ),

    while: ($) => seq(optional("inline"), "while", field("condition", $._expr), field("body", $.block)),
    let: ($) => seq(optional("comptime"), "let", optional("mut"), $.identifier, optional(seq(":", $._expr)), "=", $._expr),
    return: ($) => seq("return", $._expr),
    assign: ($) => seq($._expr, "=", $._expr),

    // Definitions
    fn_def: ($) => seq(
      optional("eager"),
      "fn",
      "(",
      commaSeparated($.param_def, "params"),
      ")",
      field("return_type", $._expr),
      field("body", $.block)
    ),
    param_def: ($) => seq(
      optional("comptime"),
      field("name", $.identifier),
      ":",
      field("type", choice($.param_any_type, $._expr))
    ),
    param_any_type: ($) => seq("$", field("name", $.identifier)),

    struct_def: ($) => seq(
      "struct",
      optional(field("type_index", $._expr)),
      "{",
      commaSeparated($.field_def, "fields"),
      repeat(field("methods", $.method_def)),
      "}"
    ),
    field_def: ($) => seq(field("name", $.identifier), ":", field("type", $._expr)),
    method_def: ($) => seq(
      optional("eager"),
      "fn",
      field("name", $.identifier),
      "(",
      commaSeparated($.param_def, "params"),
      ")",
      field("return_type", $._expr),
      field("body", $.block)
    ),

    tuple_type: ($) => seq("tuple", "{", commaSeparated($._expr, "elements"), "}"),
    tuple_lit: ($) => seq(
      "(",
      choice(
        ")",
        seq(field("elements", $._expr), ",", commaSeparated($._expr, "elements"), ")")
      )
    ),

    struct_lit: ($) => seq(field("type", $._expr), "{", commaSeparated($.field_init, "fields"), "}"),
    field_init: ($) => seq(field("name", $.identifier), ":", field("value", $._expr)),

    // Literals
    _literal: ($) => choice(
      $.bool_literal,
      $.hex_literal,
      $.bin_literal,
      $.dec_literal,
      $.string_literal,
    ),
    bool_literal: (_) => choice("true", "false"),
    self_type: (_) => "Self",
    hex_literal: (_) => /0x[0-9A-Fa-f][0-9A-Fa-f_]*/,
    bin_literal: (_) => /0b[01][01_]*/,
    dec_literal: (_) => /[0-9][0-9_]*/,
    string_literal: ($) => seq(
      $._string_literal_segment,
      repeat($._string_literal_segment),
    ),
    _string_literal_segment: ($) => choice($.quoted_string_literal, $.hex_string_literal),
    quoted_string_literal : ($) => seq('"', $._string_literal_end),
    hex_string_literal: (_) => token(prec(1, /hex"[0-9A-Fa-f]*"/)),

    // Helpers
    block_comment: ($) => seq('/*', $._block_comment_content, '*/'),
    line_comment: (_) => /\/\/[^\n]*/,
    identifier: (_) => /@?[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});


/**
 * Creates a rule that matches a comma separated list of the input rule, allowing a trailing comma.
 *
 * @param {RuleOrLiteral} rule
 * @param {string | null} fieldName
 *
 * @returns {ChoiceRule}
 */
function commaSeparated(rule, fieldName = null) {
  if (fieldName === null) {
    return optional(seq(rule, repeat(seq(",", rule)), optional(",")));
  } else {
    return optional(seq(field(fieldName, rule), repeat(seq(",", field(fieldName, rule))), optional(",")));
  }
}
