plank-tree-sitter/test/corpus/simple.txt
================================================================================
Basic example
================================================================================

const my_func = fn () u256 {
    x = 18446744073709551616;
};

const IMPORTANT_NUM: u256 = 3;

const ByteBuffer = struct 64 {
    ptr: byteptr,
    len: u256,
};

init {
    x = 3;
    y = 24;
}


run {

}

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (fn_def
      (identifier)
      (block
        (assign
          (identifier)
          (dec_literal)))))
  (const_def
    (identifier)
    (identifier)
    (dec_literal))
  (const_def
    (identifier)
    (struct_def
      (dec_literal)
      (field_def
        (identifier)
        (identifier))
      (field_def
        (identifier)
        (identifier))))
  (init
    (block
      (assign
        (identifier)
        (dec_literal))
      (assign
        (identifier)
        (dec_literal))))
  (run
    (block)))

================================================================================
Arithmetic
================================================================================
const x = {
    3 + y * (x + 0x234)

};

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (block
      (binary_expr
        (dec_literal)
        (binary_expr
          (identifier)
          (paren_expr
            (binary_expr
              (identifier)
              (hex_literal))))))))

================================================================================
If expression
================================================================================
const x = if true { 1 } else { 2 };

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (if_expr
      (bool_literal)
      (block
        (dec_literal))
      (block
        (dec_literal)))))

================================================================================
While loop
================================================================================
init {
    while x { y = 1; }
}

--------------------------------------------------------------------------------

(source_file
  (init
    (block
      (while
        (identifier)
        (block
          (assign
            (identifier)
            (dec_literal)))))))

================================================================================
Inline while loop
================================================================================
init {
    inline while x { y = 1; }
}

--------------------------------------------------------------------------------

(source_file
  (init
    (block
      (while
        (identifier)
        (block
          (assign
            (identifier)
            (dec_literal)))))))

================================================================================
Unary expressions
================================================================================
const x = -(1);
const y = !true;
const z = ~x;

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (unary_expr
      (paren_expr
        (dec_literal))))
  (const_def
    (identifier)
    (unary_expr
      (bool_literal)))
  (const_def
    (identifier)
    (unary_expr
      (identifier))))

================================================================================
Comptime block
================================================================================
init {
    let x = comptime { 1 + 2 };
}

--------------------------------------------------------------------------------

(source_file
  (init
    (block
      (let
        (identifier)
        (comptime_block
          (block
            (binary_expr
              (dec_literal)
              (dec_literal))))))))

================================================================================
Struct literal
================================================================================
const x = MyType { a: 1, b: 2 };

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (struct_lit
      (identifier)
      (field_init
        (identifier)
        (dec_literal))
      (field_init
        (identifier)
        (dec_literal)))))

================================================================================
Function with comptime params
================================================================================
const f = fn (comptime T: Type, x: T) T {
    x
};

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (fn_def
      (param_def
        (identifier)
        (identifier))
      (param_def
        (identifier)
        (identifier))
      (identifier)
      (block
        (identifier)))))

================================================================================
Return statement
================================================================================
const f = fn () u256 {
    return 42;
};

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (fn_def
      (identifier)
      (block
        (return
          (dec_literal))))))

================================================================================
Let statement
================================================================================
init {
    let x = 1;
    let mut y: u256 = 2;
}

--------------------------------------------------------------------------------

(source_file
  (init
    (block
      (let
        (identifier)
        (dec_literal))
      (let
        (identifier)
        (identifier)
        (dec_literal)))))

================================================================================
Binary operators
================================================================================
const x = a or b and c == d | e ^ f & g << h + i * j;

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (binary_expr
      (identifier)
      (binary_expr
        (identifier)
        (binary_expr
          (identifier)
          (binary_expr
            (identifier)
            (binary_expr
              (identifier)
              (binary_expr
                (identifier)
                (binary_expr
                  (identifier)
                  (binary_expr
                    (identifier)
                    (binary_expr
                      (identifier)
                      (identifier))))))))))))

================================================================================
Member access
================================================================================
const x = foo.bar.baz;

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (member
      (member
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Import Simple
================================================================================
import very_nice::hey::bob;

--------------------------------------------------------------------------------

(source_file
  (import
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Import As
================================================================================
import very_nice::hey as nice;

--------------------------------------------------------------------------------

(source_file
  (import
    (identifier)
    (identifier)
    (suffix_import_as
      (identifier))))

================================================================================
Import Glob
================================================================================
import very_nice::hey::haha::*;

--------------------------------------------------------------------------------

(source_file
  (import
    (identifier)
    (identifier)
    (identifier)
    (suffix_import_all)))

================================================================================
Import Group
================================================================================
import std::math::{add as a, sub,};

--------------------------------------------------------------------------------

(source_file
  (import
    (identifier)
    (identifier)
    (suffix_import_group
      (import_group_item
        (identifier)
        (identifier))
      (import_group_item
        (identifier)))))

================================================================================
Struct Definition (Without Type Index)
================================================================================
const Values = struct {
    x: u256,
    b: u256
};

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (struct_def
      (field_def
        (identifier)
        (identifier))
      (field_def
        (identifier)
        (identifier)))))

================================================================================
Unary vs postfix precedence
================================================================================
const x = !wow();
const y = !foo.bar(baz);
const z = !a.b;

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (unary_expr
      (fn_call
        (identifier))))
  (const_def
    (identifier)
    (unary_expr
      (fn_call
        (member
          (identifier)
          (identifier))
        (identifier))))
  (const_def
    (identifier)
    (unary_expr
      (member
        (identifier)
        (identifier)))))

================================================================================
Comments
================================================================================
// hello

/* multiline
*/

/* nested /* multiline
     /* comment */ */

  */

/**/

--------------------------------------------------------------------------------


(source_file
  (line_comment)
  (block_comment)
  (block_comment)
  (block_comment))

================================================================================
Group Imports
================================================================================

import std::membytes::{membytes, membytes_from_ptr, unsafe_membytes_write_u256, unsafe_membytes_read_u256};
import std::math::ceil32;
import std::utils::reduce;

--------------------------------------------------------------------------------

(source_file
  (import
    (identifier)
    (identifier)
    (suffix_import_group
      (import_group_item
        (identifier))
      (import_group_item
        (identifier))
      (import_group_item
        (identifier))
      (import_group_item
        (identifier))))
  (import
    (identifier)
    (identifier)
    (identifier))
  (import
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Call vs. Binary Op Precedence
================================================================================

const x = y() + b();

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (binary_expr
      (fn_call
        (identifier))
      (fn_call
        (identifier)))))

================================================================================
String Literals
================================================================================

const msg = "custom failure";
const escaped = "quote: \" slash: \\";
const bytes = hex"00ff";
init {
  @compile_error(msg);
}

--------------------------------------------------------------------------------

(source_file
  (const_def
    (identifier)
    (string_literal))
  (const_def
    (identifier)
    (string_literal))
  (const_def
    (identifier)
    (hex_string_literal))
  (init
    (block
      (fn_call
        (identifier)
        (identifier)))))
